Fixes nav position on mobile

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header {
 ----------------------------------------------------------------------*/
 #open-nav {
   float: right;
-  margin-right: 25px;
+  margin-right: 15px;
   padding: 8px 0 0;
   font-size: 2.5em;
   cursor: pointer;
